# litmux

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: litmux-ci.yml
examples/01-quickstart/: README.md  litmux.yaml
examples/02-multi-model/: README.md  litmux.yaml
examples/03-generate-and-eval/: README.md  litmux.yaml
examples/03-generate-and-eval/datasets/: seed_tickets.csv
examples/03-generate-and-eval/prompts/: classify.txt
litmux/: __init__.py  cache.py  cli.py  cloud.py  config.py  cost.py  dataset.py  display.py  eval_runner.py  evaluator.py  models.py  report.py  runner.py
tests/: conftest.py  test_cache.py  test_config.py  test_cost.py  test_dataset.py  test_evaluator.py  test_models.py
