[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litmux"
version = "0.1.0"
description = "The testing and evaluation platform for AI-powered software."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["llm", "testing", "evaluation", "ai", "prompt", "openai", "anthropic", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://litmux.dev"
Documentation = "https://github.com/litmux/litmux#readme"
Repository = "https://github.com/litmux/litmux"
Issues = "https://github.com/litmux/litmux/issues"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "google-genai>=1.0.0",
    "huggingface-hub>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
litmux = "litmux.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["litmux*"]
